--- a/assets/welcome-page-style.css
+++ b/assets/welcome-page-style.css
@@ -58,7 +58,7 @@ h3 {
   font-family: "Outfit", sans-serif;
   color: #c2128d;
   font-size: 2rem;
-  margin-bottom: 0;
+  margin-bottom: 10px;
 }
 
 .instructions {
@@ -75,6 +75,7 @@ ul {
   line-height: 2rem;
   margin-top: 50px;
   margin-bottom: 50px;
+  padding-left: 30px;
 }
 
 .checkbox-container,
@@ -93,10 +94,11 @@ button {
   font-weight: bold;
   font-size: 1.2rem;
   background-color: #01ffff;
+  border: 1px solid #01ffff;
 }
 
-label {
-  font-family: "Inter", sans-serif;
+button:hover {
+  box-shadow: 0px 0px 12px 2px #01bdffbd;
 }
 
 button,
@@ -113,7 +115,9 @@ input[type="checkbox"] {
   border: 2px solid rgb(255, 255, 255);
   background-color: transparent;
   margin: 0;
-  vertical-align: middle;
+  margin-right: 10px;
+  vertical-align: bottom;
+  position: relative;
 }
 
 input[type="checkbox"]:checked::after {
@@ -121,8 +125,14 @@ input[type="checkbox"]:checked::after {
   font-size: 16px;
   color: rgb(255, 255, 255);
   font-weight: bold;
+  padding-bottom: 2px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 label {
-  margin-left: 10px;
+  font-family: "Inter", sans-serif;
+  font-weight: bold;
 }
