--- a/assets/style-quiz.css
+++ b/assets/style-quiz.css
@@ -30,13 +30,17 @@ main {
 }
 
 img {
-  width: 150px;
+  width: 200px;
 }
 
 .logo {
+  display: inline-block;
   padding-top: 50px;
   padding-bottom: 110px;
   width: fit-content;
+  position: absolute;
+  top: 30px;
+  left: 90px;
 }
 
 .titles h1 {
@@ -44,12 +48,13 @@ img {
   font-size: 5rem;
   line-height: 4.7rem;
   margin-bottom: 0;
+  margin-top: 10rem;
   font-weight: 400;
 }
 
 .titles {
   padding-top: 10rem;
-  padding-bottom: 50px;
+  padding-bottom: 80px;
   text-align: center;
 }
 
@@ -57,39 +62,39 @@ img {
   text-align: center;
 }
 
-.btn1,
-.btn2,
-.btn3,
-.btn4 {
-  cursor: pointer;
-}
-
-.btn1:hover,
-.btn2:hover,
-.btn3:hover,
-.btn4:hover {
-  background: rgb(196, 0, 143);
-  background: linear-gradient(rgba(196, 0, 143, 1) 0%, rgba(146, 0, 124, 1) 100%);
-}
-
 button {
-  margin: 15px;
+  margin: 15px 20px;
   display: inline-block;
-  width: 400px;
-  height: 100px;
+  width: 450px;
+  height: 85px;
   border: 2px solid #eeeff1;
   border-radius: 55px;
   color: #eeeff1;
   background-color: rgb(116 115 115 / 25%);
   font-weight: 600;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
+  margin-bottom: 10px;
+  cursor: pointer;
+}
+
+.hover:hover {
+  background: rgb(196, 0, 143);
+  background: linear-gradient(rgba(196, 0, 143, 1) 0%, rgba(146, 0, 124, 1) 100%);
 }
 
 .correct-answer {
-  background-color: green;
+  background-color: green !important;
 }
 
 .wrong-answer {
+  background-color: red !important;
+}
+
+button.correct-answer:hover {
+  background-color: green;
+}
+
+button.wrong-answer:hover {
   background-color: red;
 }
 
@@ -108,4 +113,45 @@ button {
   font-size: 5rem;
   line-height: 4.7rem;
   margin-bottom: 0;
+}
+
+/* timer to fix */
+.container {
+  text-align: right;
+  position: absolute;
+  top: 50px;
+  right: 50px;
+}
+
+.timer-container {
+  position: relative;
+  width: 150px;
+  height: 150px;
+  display: inline-block;
+}
+
+svg {
+  transform: rotate(-90deg);
+}
+.circle-bg {
+  fill: none;
+  stroke: #555;
+  stroke-width: 10;
+}
+.circle {
+  fill: none;
+  stroke: #00c2ff;
+  stroke-width: 10;
+  stroke-dasharray: 314;
+  stroke-dashoffset: 314;
+  transition: stroke-dashoffset 0.1s linear;
+}
+.timer-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 24px;
+  color: white;
+  font-family: Arial, sans-serif;
 }
