--- a/assets/css/welcome-page-style.css
+++ b/assets/css/welcome-page-style.css
@@ -162,8 +162,23 @@ ul {
   box-shadow: 0 0 15px rgba(244, 67, 54, 0.5);
 }
 
-input,
-label {
+label.easy-btn,
+label.medium-btn,
+label.hard-btn {
+  display: inline-block;
+  font-size: 1.2rem;
+  font-weight: bold;
+  font-family: "Inter", sans-serif;
+  cursor: pointer;
+  text-align: center;
+  line-height: 55px;
+}
+
+input[type="radio"] {
+  display: none;
+}
+
+input {
   cursor: pointer;
 }
 
@@ -190,11 +205,6 @@ input[type="checkbox"]:checked::after {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-}
-
-label {
-  font-family: "Inter", sans-serif;
-  font-weight: bold;
 }
 
 .unchecked {
