--- a/assets/css/reasults.css
+++ b/assets/css/reasults.css
@@ -21,7 +21,10 @@ body {
   background-image: url(../img/bg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  background-image: center;
+  background-attachment: fixed;
   color: #e7e7eb;
+  width: 100%;
 }
 
 img {
@@ -29,12 +32,14 @@ img {
 }
 
 .logo {
+  text-align: left;
   padding-top: 50px;
   padding-bottom: 50px;
 }
 main {
-  margin-left: 6.5em;
-  margin-right: 6.5em;
+  text-align: center;
+  padding-inline: 100px;
+  width: 100%;
 }
 .title {
   text-align: center;
@@ -50,41 +55,98 @@ main {
   font-size: 2.5rem;
   font-weight: 400;
 }
-.cake {
-  text-align: center;
-  padding: 20px;
-}
-
+/* sezzioni prcentuale % */
 .false {
+  line-height: 65px;
+  text-align: left;
+  padding-inline: 10rem;
+  height: auto;
   font-family: "Outfit", sans-serif;
   width: 33%;
   display: inline-block;
+  vertical-align: 15rem;
 }
 .true {
+  line-height: 65px;
+  text-align: left;
+  padding-right: 10rem;
+  padding-left: 6rem;
+  height: auto;
   font-family: "Outfit", sans-serif;
   width: 33%;
   display: inline-block;
+  vertical-align: 15rem;
 }
 .false h2 {
+  margin: 0;
   font-weight: 400;
   font-size: 4rem;
 }
 .true h2 {
+  margin: 0;
   font-weight: 400;
+  font-size: 4.5rem;
+}
+.results p {
+  line-height: 35px;
+  font-size: large;
+  font-weight: 300;
+  margin: 0;
+}
+.results h3 {
+  margin: 0;
+  text-align: left;
   font-size: 4rem;
+  font-weight: 600;
 }
 
-.donut {
-  width: 33%;
-  display: inline-block;
-}
 .rateUs {
   text-align: center;
 }
+/* Contenitore centrale */
+.container {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 1s ease-out, transform 1s ease-out;
+  text-align: center;
+}
+.results {
+  width: 100%;
+  padding: 80px 0px;
+}
+/* Contenitore del grafico */
+.chart-container {
+  width: 33%;
+  margin: 0 auto;
+  position: relative;
+  display: inline-block;
+}
+
+/* Canvas per il grafico */
+canvas {
+  width: 100%;
+  height: 100%;
+  display: inline-block;
+  opacity: 0;
+  transform: scale(0.8);
+  transition: opacity 1s ease-out 0.5s, transform 1s ease-out 0.5s;
+}
+.resultChart {
+  width: 33%;
+  display: inline-block;
+}
+.respose {
+  min-width: auto;
+  max-width: 280px;
+  position: absolute;
+  top: 38%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 button {
   cursor: pointer;
   color: #e7e7eb;
-  -webkit-appearance: none;
   appearance: none;
   background-color: transparent;
   border: 2px solid rgb(255, 255, 255);
@@ -93,4 +155,9 @@ button {
   font-weight: bold;
   font-size: 2rem;
   font-family: "Outfit", sans-serif;
+  transition: opacity 1s ease-out 1.5s;
+}
+button:hover {
+  background-color: white;
+  color: black;
 }
