--- a/assets/css/results.css
+++ b/assets/css/results.css
@@ -59,9 +59,8 @@ main {
 /* sezzioni prcentuale % */
 .false {
   line-height: 65px;
-  text-align: left;
+  text-align: center;
   padding-inline: 10rem;
-  height: auto;
   font-family: "Outfit", sans-serif;
   width: 33%;
   display: inline-block;
@@ -69,10 +68,9 @@ main {
 }
 .true {
   line-height: 65px;
-  text-align: left;
+  text-align: center;
   padding-right: 10rem;
-  padding-left: 6rem;
-  height: auto;
+  padding-left: 10rem;
   font-family: "Outfit", sans-serif;
   width: 33%;
   display: inline-block;
@@ -88,6 +86,9 @@ main {
   font-weight: 400;
   font-size: 4.5rem;
 }
+.results {
+  text-align: center;
+}
 .results p {
   line-height: 35px;
   font-size: large;
@@ -96,7 +97,7 @@ main {
 }
 .results h3 {
   margin: 0;
-  text-align: left;
+  text-align: center;
   font-size: 4rem;
   font-weight: 600;
 }
@@ -105,7 +106,7 @@ main {
   text-align: center;
 }
 /* Contenitore centrale */
-.container {
+.container #container {
   opacity: 0;
   transform: translateY(20px);
   transition: opacity 1s ease-out, transform 1s ease-out;
