--- a/assets/css/results.css
+++ b/assets/css/results.css
@@ -32,12 +32,16 @@ img {
 
 .logo {
   text-align: left;
+  padding-top: 100px;
   padding-bottom: 50px;
 }
 main {
   text-align: center;
   width: 100%;
-  padding: 100px 200px;
+  padding-top: 0;
+  padding-left: 200px;
+  padding-right: 200px;
+  padding-bottom: 50px;
 }
 .title {
   text-align: center;
@@ -114,6 +118,9 @@ main {
   width: 100%;
   padding: 80px 0px;
 }
+#exam-result-container {
+  width: 100%;
+}
 /* Contenitore del grafico */
 .chart-container {
   width: 33%;
@@ -125,7 +132,7 @@ main {
 /* Canvas per il grafico */
 canvas {
   width: 100%;
-  height: 100%;
+
   display: inline-block;
   opacity: 0;
   transform: scale(0.8);
@@ -136,6 +143,7 @@ canvas {
   width: 33%;
   display: inline-block;
 }
+
 #exam-result-container {
   position: absolute;
   width: 100%;
