--- a/assets/css/style-quiz.css
+++ b/assets/css/style-quiz.css
@@ -45,7 +45,7 @@ img {
 
 .titles h1 {
   font-family: "Outfit", sans-serif;
-  font-size: 5rem;
+  font-size: 60px;
   line-height: 4.7rem;
   margin-bottom: 0;
   margin-top: 10rem;
@@ -72,7 +72,7 @@ button {
   color: #eeeff1;
   background-color: rgb(116 115 115 / 25%);
   font-weight: 600;
-  font-size: 1.2rem;
+  font-size: 16px;
   margin-bottom: 10px;
   cursor: pointer;
 }
