--- a/assets/css/results.css
+++ b/assets/css/results.css
@@ -129,7 +129,7 @@ main {
   display: inline-block;
 }
 
-/* Canvas per il grafico */
+/* Canvas per il grafico a cianbella */
 canvas {
   width: 100%;
 
