--- a/assets/css/feedback.css
+++ b/assets/css/feedback.css
@@ -31,6 +31,7 @@ img {
   padding-bottom: 50px;
   margin-inline: 50px;
   margin-left: 140px;
+  cursor: pointer;
 }
 main {
   text-align: center;
